--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{%load static%}
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/home_desktop.css' %}">
+
 </head>
 <body>
-$END$
+<h1>Hello, folks</h1>
+
 </body>
-</html>
