--- a/static/css/home_mobile.css
+++ b/static/css/home_mobile.css
@@ -1,46 +1,27 @@
+header {
+  display:block;
+  width:100%;
+  background-color:rgb(8, 130, 187);
+  text-align: center;
+}
+.bx-wrapper{
+  width:100% !important;
+}
+header img {
+  width:20em;
+}
 .tablet-only{
   display:none;
   }
 .desktop-and-mobile-only{
     display:block;
   }
-.nav-right {float:right}
-.desktop-only{display:inline-block;}
-.img-logo{
-  width:2.5em;
-}
-.logo-div{
-  text-align: center;
-}
-body{
-  height: 100%;
-  width:100%;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(134,134,233,1) 35%, rgba(255,255,255,1) 100%);
-  z-index: -1;
-  overflow-x: hidden;
-}
-.theme-li{
-  font-size: small;
-}
-input:not([type=submit]):not([type=reset]):focus, select:focus{
-background-color: rgb(248, 207, 130);
-border: solid rgb(252, 20, 3) 0.2em;
-}
+.desktop-only{display:none;}
+#settings{width:1.2em;} 
 
-button:focus, input:focus, select:focus{
-outline: none;
-}
-
-#logo {width:100%}
-.nav-right {float:right}
-header {float: left;
-  width:8%;
-}
-
-nav {float: right;
-  width:92%;
-  background-color:rgb(8, 130, 187);
+nav {
+  width:auto;
+  background-color:rgb(10, 6, 6);
   font-size: 20px;
   /*transition: all 0.5s;*/
   padding-top: 0.6em;
@@ -53,38 +34,26 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color:rgb(8, 130, 187);
+  background-color:rgb(10, 6, 6);
+  display:block;
 }
 
 nav li {
-  float: left;
+  margin:1em;
+  background-color:rgb(8, 130, 187);
+  display:block;
 }
 
 nav li a {
-  display: inline-block;
+  display: block;
   color: white;
   text-align: center;
   padding: 1.25em 1.25em;
   text-decoration: none;
-  border-radius: 5em;
 }
 
 nav li a:hover {
   background-color:#140363;
-
-}
-#nav-search{
-  margin-top: 1.3em;
-  display:inline-block;
-  width:13em;
-  height: 3em;
-  padding-left:0.
-  5em;
-  border-radius: 5em;
-  background-image: url("../images/menu_search.png");
-  background-size: 1.5em;
-  background-repeat: no-repeat;
-  background-position: right;
 
 }
 #banner{
@@ -105,11 +74,12 @@ nav li a:hover {
   padding: 1em;
   box-shadow: 1em 1em 1em #4c4f4d;
   margin-right: 2em;
-
+  
 }
+
 .banner-aside{
-  display: inline-block;
-  width: 25%;
+  display: block;
+  width: 70%;
   background-color: #9ea0f7;
   border-radius: 0 5em 5em 5em;
   box-shadow: 1em 1em 1em #4c4f4d;
@@ -120,16 +90,11 @@ nav li a:hover {
 .banner-aside h3{
   text-align: left;
 }
-#main{
-  background-color: rgb(226, 210, 210);
-  margin-top: -1em;
-}
+
 #article-text{
   text-align: right;
-  color: white;
+  color: rgb(87, 84, 84);
   font-size: 1.1em;
-  background-color:black;
-  opacity: 0.5;ss
 }
 #article-text h2{
 
@@ -140,11 +105,40 @@ nav li a:hover {
   text-align: right;
 
 }
-#settings{width:1.2em;}
-#img-search{width:1.2em;
-          margin-top: 0.3em;}
+
+#main{
+  background-color: rgb(226, 210, 210);
+  margin-top: -1em;
+}
+
+.hospital-images{
+  display: block;
+  width: auto;
+}
+.hospital-images figcaption{
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.hospital-images img{
+  width: 90%;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.event-images{
+  display: block;
+  width: 70%;
+
+}
+
+.img-event img{
+  overflow: auto;
+  width:100%;
+}
 
 .sub-heading{
+  text-align:center;
   background-color: rgb(8, 130, 187);
   padding-left: 0.5em;
   padding-top: 0.2em;
@@ -155,46 +149,70 @@ nav li a:hover {
   width:2%;
   margin-right:0.5em;
   float:right;
+  display: none;
 }
 
-#ticket-div{
+
+/* #ticket-div{
   width:100%;
   text-align: center;
-}
+} */
 
-#ticket-div .details{
+/* #ticket-div .details{
   width:auto;
-  margin-left: 18%;
-}
+  margin-left: 1em;
+} */
 
-#ticket-div .details_child{
+/* #ticket-div .details_child{
   background-color: rgb(109, 190, 245);
   box-shadow: 1em 1em 1em #4c4f4d;
+  
+} */
 
+/*  input box size adjustments  */
+.input-text{
+  border-radius: 1em;
+  width: 2em;
+  height: 2em;
+  padding-left:0.3em;
+  margin:0;
+} 
+.input-date{
+  border-radius: 1em;
+  width: 9.8em;
 }
-
-#ticket-div select, .input-text, .input-date{
-
+.travel-date{
+  padding-top: 0.6em;
+}
+#ticket-div select{
+  border-radius: 1em;
+  width: 8em;
+  height: 2em;
+  padding-left:0.5em;
+  margin:0;
+}
+/* #ticket-div select, .input-text, .input-date{
+  
   border-radius: 5em;
   width: 21.5em;
   height: 2.5em;
   box-shadow: 1em 1em 1em #4c4f4d;
   padding-left:1em;
   margin:1em;
-}
-.input-btn {
+} */
+/* .input-btn {
   box-shadow: 1em 1em 1em #4c4f4d;
   padding-left:1em;
   margin:1em;
   width: 5.5em;
   height: 2.5em;
- }
- .radio-btn {
+ } */
+ /* .radio-btn {
   box-shadow: 1em 1em 1em #4c4f4d;
   margin:1em;
   width: 1.5em;
   height: 1.5em;
- }
+ } */
 .search_button{
   background-color: maroon;
   color: white;
@@ -221,35 +239,36 @@ height: 1.5em;
 .table-search tr, .table-search td, .table-search th{
   border: solid black;
 }
-.table-search caption{
-  background-color: rgb(8, 130, 187);
-  font-weight: bold;
-}
+
 .table-search th{
   background-color: rgb(28, 8, 99);
   color: white;
   font-weight: bold;
+
 }
-.table-search
+.table-search 
 {
     width:100%;
-
+    
     border: solid black;
     margin-top:2.5em;
     margin-bottom:3em;
-    border-collapse: collapse;
-
+    /*
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    */
 }
 .table-search td
 {
 padding-left: 1em;
 }
-.even
+.even 
 {
     background-color: gray;
-
+    
 }
-.odd
+.odd 
 {
     background-color: rgb(249, 250, 236);
 }
@@ -266,7 +285,7 @@ tfoot{
   margin:0.5em;
 }
 .footer{
-
+  
   background-color:rgb(8, 130, 187);
   color: white;
 }
@@ -280,25 +299,79 @@ tfoot{
 }
 
 .pagination_container{
+  /*
 border: 1px solid rgba(0, 0, 0, .11);
+*/
 padding: 10px;
-width: 500px;
+width: 250px;
 }
 
-.dark_red_theme{
-  background-color: rgb(170, 23, 23) !important;
-  background: rgb(170, 23, 23) !important;
-  color:white !important;
+/* Responsive changes */
+.table-search, thead, tbody, #details th, #table-body tr td, thead tr, #table-body tr { 
+  display: block; 
 }
-.dark_black_theme{
-  background-color: black !important;
-  background: black !important;
-  color:white !important;
+
+.table-search caption{
+  display: inline;
+  background-color: rgb(8, 130, 187);
+  font-weight: bold;
+  clear: left;
 }
-.dark_gray_theme{
-  background-color: rgb(43, 41, 41) !important;
-  background: rgb(43, 41, 41) !important;
-  color:white !important;
+
+#page_border{
+  border: none;
+}
+
+/* Hide table headers (but not display: none;, for accessibility) */
+thead tr { 
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+thead tr, tbody tr { border: 1px solid #ccc; }
+
+#table-body tr td { 
+  /* Behave  like a "row" */
+  border: none;
+  border-bottom: 1px solid #eee; 
+  position: relative;
+  padding-left: 50%; 
+}
+
+#table-body tr td:before { 
+  /* Now like a table header */
+  position: absolute;
+  /* Top/left values mimic padding */
+  top: 6px;
+  left: 6px;
+  width: 45%; 
+  padding-right: 10px; 
+  white-space: nowrap;
+}
+
+/*
+Label the data
+*/
+#table-body tr td:nth-of-type(1):before { content: "Departure"; }
+#table-body tr td:nth-of-type(2):before { content: "Duration"; }
+#table-body tr td:nth-of-type(3):before { content: "Arrival"; }
+#table-body tr td:nth-of-type(4):before { content: "Price"; }
+#table-body tr td:nth-of-type(5):before { content: "Book"; }
+
+
+#trip2::after{
+  content: "\a";
+  white-space: pre;
+}
+#single{
+  margin-left: 0.3rem;
+}
+#dest{
+  width:93%;
+}
+#fromplace{
+  width:78%;
 }
 
 #table-body tr:nth-child(even) {background: lightsalmon;}
