--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,4 +1,4 @@
-//templates/index.html
+
 {% extends "base.html" %}
  
 {% block title %}Add New Covid Report{% endblock title %}
@@ -23,22 +23,22 @@
     {{ form.id }}
   </div>
    </div>
-   <div class="form-group row">  
+   <div class="form-group row">
   <label class="col-sm-2 col-form-label">Country:</label>
-  <div class="col-sm-4">  
-    {{ form.country }}
-  </div>  
-   </div>  
+  <div class="col-sm-4">
+    {{ form.Country}}
+  </div>
+   </div>
   <div class="form-group row">  
   <label class="col-sm-2 col-form-label">Total Cases:</label>
   <div class="col-sm-4">  
-    {{ form.total_cases }}
+    {{ form.TotalCases }}
   </div>  
    </div>  
   <div class="form-group row">  
   <label class="col-sm-2 col-form-label">New Cases:</label>
   <div class="col-sm-4">  
-    {{ form.new_cases }}
+    {{ form.New_cases }}
   </div>  
    </div>
  <div class="form-group row">
@@ -57,6 +57,12 @@
   <label class="col-sm-2 col-form-label">Total Recovered:</label>
   <div class="col-sm-4">
     {{ form.total_recovered }}
+  </div>
+   </div>
+   <div class="form-group row">
+  <label class="col-sm-2 col-form-label">New Recovered:</label>
+  <div class="col-sm-4">
+    {{ form.new_recovered }}
   </div>
    </div>
   <div class="form-group row">
@@ -101,7 +107,29 @@
     {{ form.population }}
   </div>
    </div>
-
+<div class="form-group row">
+  <label class="col-sm-2 col-form-label">Continent:</label>
+  <div class="col-sm-4">
+    {{ form.continent }}
+  </div>
+   </div>
+   <div class="form-group row">
+  <label class="col-sm-2 col-form-label">1 Caseevery X ppl:</label>
+  <div class="col-sm-4">
+    {{ form.CaseEveryXppl }}
+  </div>
+   </div>  <div class="form-group row">
+  <label class="col-sm-2 col-form-label">1 Deathevery X ppl:</label>
+  <div class="col-sm-4">
+    {{ form.DeathEveryXppl }}
+  </div>
+   </div>
+   <div class="form-group row">
+  <label class="col-sm-2 col-form-label">1 Testevery X ppl:</label>
+  <div class="col-sm-4">
+    {{ form.TesteveryXppl }}
+  </div>
+   </div>
   <div class="form-group row">  
   <label class="col-sm-1 col-form-label"></label>  
   <div class="col-sm-4">  
