--- a/myapp/templates/show.html
+++ b/myapp/templates/show.html
@@ -16,6 +16,7 @@
                 <th>Total Deaths</th>
                 <th>New Deaths</th>
                 <th>Total Recovered</th>
+                <th>New Recovered</th>
                 <th>Active Cases</th>
                 <th>Serious</th>
                 <th>Total Cases per 1M</th>
@@ -23,6 +24,10 @@
                 <th>Total Tests</th>
                 <th>Tests per 1M</th>
                 <th>Population</th>
+                <th>Continent</th>
+                <th>1 Caseevery X ppl</th>
+                <th>1 Deathevery X ppl</th>
+                <th>1 Testevery X ppl</th>
                 <th>Edit</th>
                 <th>Delete</th>
              </thead>
@@ -33,10 +38,11 @@
      <td><input type='text' id='id' value='{{ todo.id }}' disabled></td>
      <td><input type='text' id='country' value='{{ todo.Country }}' disabled></td>
      <td><input type='text' id='total_cases' value='{{ todo.TotalCases }}' disabled></td>
-     <td><input type='text' id='new_cases' value='{{ todo.new_cases }}' disabled></td>
+     <td><input type='text' id='new_cases' value='{{ todo.New_cases }}' disabled></td>
      <td><input type='text' id='total_Deaths' value='{{ todo.total_Deaths }}' disabled></td>
      <td><input type='text' id='new_deaths' value='{{ todo.new_deaths }}' disabled></td>
      <td><input type='text' id='total_recovered' value='{{ todo.total_recovered }}' disabled></td>
+     <td><input type='text' id='new_recovered' value='{{ todo.new_recovered }}' disabled></td>
      <td><input type='text' id='active_cases' value='{{ todo.active_cases }}' disabled></td>
      <td><input type='text' id='serious' value='{{ todo.serious }}' disabled></td>
      <td><input type='text' id='total_cases_percent' value='{{ todo.total_cases_percent }}' disabled></td>
@@ -44,6 +50,10 @@
      <td><input type='text' id='total_tests' value='{{ todo.total_tests }}' disabled></td>
      <td><input type='text' id='tests_percent' value='{{ todo.tests_percent }}' disabled></td>
      <td><input type='text' id='population' value='{{ todo.population }}' disabled></td>
+     <td><input type='text' id='continent' value='{{ todo.continent }}' disabled></td>
+     <td><input type='text' id='CaseEveryXppl' value='{{ todo.CaseEveryXppl }}' disabled></td>
+     <td><input type='text' id='DeathEveryXppl' value='{{ todo.DeathEveryXppl }}' disabled></td>
+     <td><input type='text' id='TesteveryXppl' value='{{ todo.TesteveryXppl }}' disabled></td>
      <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/edit/{{ todo.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
      <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/delete/{{ todo.id }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></a></p></td>
     </tr>
