--- a/myapp/templates/api.html
+++ b/myapp/templates/api.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
  
-{% block title %}{% endblock title %}
+{% block title %}Add New Covid Report{% endblock title %}
  
 {% block content %}
  <div class="col-md-12">
@@ -9,8 +9,9 @@
   <table id="bootstrapdatatable" class="table table-striped table-bordered" width="100%">
             <thead>
 <!--                <th><input type="checkbox" id="checkall" /></th>-->
-                <th>ID</th>
+                <th>Updated</th>
                 <th>Country</th>
+                <th>Country Info</th>
                 <th>Total Cases</th>
                 <th>New Cases</th>
                 <th>Total Deaths</th>
@@ -54,8 +55,8 @@
      <td><input type='text' id='CaseEveryXppl' value='{{ todo.CaseEveryXppl }}' disabled></td>
      <td><input type='text' id='DeathEveryXppl' value='{{ todo.DeathEveryXppl }}' disabled></td>
      <td><input type='text' id='TesteveryXppl' value='{{ todo.TesteveryXppl }}' disabled></td>
-     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/edit/{{ todo.Country }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
-     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/delete/{{ todo.Country }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></a></p></td>
+     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/edit/{{ todo.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
+     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/delete/{{ todo.id }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></a></p></td>
     </tr>
    {% endfor %} 
    </tbody>
