--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -1,5 +1,4 @@
-
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -11,6 +10,13 @@
 
 <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+</head>
+<body>
+<div class="container">
+ <div class="row">
+    {% block content %}{% endblock %}
+ </div>
+</div>
 <script>
 $(document).ready(function() {
     $('#bootstrapdatatable').DataTable({
@@ -20,30 +26,5 @@ $(document).ready(function() {
     );
 } );
 </script>
-</head>
-<body>
-<div class="container">
- <div class="row">
-    {% block content %}{% endblock %}
- </div>
-</div>
-
-<!--    <script>-->
-
-<!--     $(document).ready(function(){-->
-<!--     $("input[name=edit]").on("click",function(){-->
-
-<!--                 $(this).closest('tr').find("input[type=text]").prop("disabled",false);-->
-<!--         })-->
-
-<!--         $("input[name=save]").on("click",function(){-->
-
-<!--             $("input[type=text]").prop("disabled",true);-->
-<!--             $form.save();-->
-
-<!--         })-->
-<!--  })-->
-<!--    </script>-->
-
 </body>
 </html>
