--- a/myapp/templates/edit.html
+++ b/myapp/templates/edit.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
  
-{% block title %}Add New Covid Report{% endblock title %}
+{% block title %}{% endblock title %}
 
 {% block content %}
 <div class="col-md-12">
     <h4>Update </h4>
- <form method="POST" class="post-form" action="/update/{{report.id}}">
+ <form method="POST" class="post-form" action="/update/{{report.Country}}">
    {% csrf_token %}
   <div class="container">
  <br>
