--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
  
-{% block title %}Add New Covid Report{% endblock title %}
+{% block title %}{% endblock title %}
  
 {% block content %}
 <div class="col-md-12">
