--- a/myapp/templates/api.html
+++ b/myapp/templates/api.html
@@ -12,21 +12,21 @@
                 <th>Updated</th>
                 <th>Country</th>
                 <th>Country Info</th>
-                <th>Total Cases</th>
-                <th>New Cases</th>
-                <th>Total Deaths</th>
-                <th>New Deaths</th>
-                <th>Total Recovered</th>
-                <th>New Recovered</th>
-                <th>Active Cases</th>
-                <th>Serious</th>
-                <th>Total Cases per 1M</th>
-                <th>Deaths per 1M</th>
-                <th>Total Tests</th>
-                <th>Tests per 1M</th>
+                <th>Cases</th>
+                <th>Today Cases</th>
+                <th>Deaths</th>
+                <th>Today Deaths</th>
+                <th>Recovered</th>
+                <th>Today Recovered</th>
+                <th>Active</th>
+                <th>Critical</th>
+                <th>Cases Per One Million</th>
+                <th>Deaths Per One Million</th>
+                <th>Tests</th>
+                <th>Tests Per One Million</th>
                 <th>Population</th>
                 <th>Continent</th>
-                <th>1 Caseevery X ppl</th>
+                <th>One Case Per People</th>
                 <th>1 Deathevery X ppl</th>
                 <th>1 Testevery X ppl</th>
                 <th>Edit</th>
